# 3DEngine

./: .gitignore  CMakeLists.txt  README.md
Assets/Shaders/: color.ps  color.vs  color.vs.txt  simple.hlsl.ps  simple.hlsl.vs
DocumentHelper/: framework.uml
Empty/: EmptyApplication.cpp
Framework/Codec/: BMP.hpp
Framework/Commen/: main.c
Framework/Common/: .GraphicsManager.hpp.un~  .main.cpp.un~  Allocator.cpp  Allocator.hpp  AssetLoader.cpp  AssetLoader.hpp  BaseApplication.cpp  BaseApplication.hpp  Buffer.hpp  CMakeLists.txt  ColorSpaceConversion.hpp  GfxConfiguration.h  GraphicsManager.cpp  GraphicsManager.hpp  GraphicsManager.hpp~  HuffmanTree.hpp  Image.cpp  Image.hpp  InputManager.cpp  InputManager.hpp  MemoryManager.cpp  MemoryManager.hpp  PhysicsManager.cpp  PhysicsManager.hpp  Scene.cpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp  SceneNode.hpp  SceneObject.cpp  SceneObject.hpp  main.cpp  main.cpp~  portable.hpp
Framework/Common/test/: AssetLoaderTest.cpp
Framework/GeomMath/: geommath.h  geommath.hpp
Framework/Interface/: IApplication.hpp  IRuntimeModule.hpp  ImageParse.hpp  SceneParser.hpp
Framework/Parser/: BMP.hpp  JPEG.hpp  PNG.hpp  TGA.hpp  ogex.hpp
Platform/: CMakeLists.txt
Platform/Empty/: EmptyApplication.cpp
Platform/Windows/: CMakeLists.txt  D3d12Application.cpp  D3d12Application.hpp  D3d12ApplicationConfig.cpp  OpenGLApplication.cpp  OpenGLApplication.hpp  OpenGLApplicationConfig.cpp  WindowsApplication.cpp  WindowsApplication.hpp  copy.pso  helloEngine_Win.c  helloEngine_d2d.cpp  helloEngine_d3d.cpp
Platform/Windows/test/: CMakeLists.txt  TextureLoadTest.cpp
RHI/: CMakeLists.txt
RHI/D2d/: D2dGraphicsManager.cpp  D2dGraphicsManager.hpp
RHI/D3D/: D3d12GraphicsManager.cpp  D3d12GraphicsManager.hpp
RHI/OpenGL/: CMakeLists.txt  OpenGLESGraphicsManager.cpp  OpenGLESGraphicsManager.hpp  OpenGLGraphicsManager.cpp  OpenGLGraphicsManager.hpp
Test/: AssetLoaderTest.cpp  CMakeLists.txt  GeomMathTest.cpp  JpegParserTest.cpp  OgexParserTest.cpp  PngParserTest.cpp  SceneLoadingTest.cpp  SceneObjectTest.cpp  Test.sln  Test.vcxproj  Test.vcxproj.filters  copy.vso  main.cpp
Test/Article_15/: Article_15.vcxproj  Article_15.vcxproj.filters  copy.vs  main.cpp
Test/Article_15/Debug/: vc141.idb
Test/Article_15/Debug/Article_15.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Test/Article_16/: Article_16.vcxproj  Article_16.vcxproj.filters  helloengine_d3d12.cpp
Test/Article_16/Debug/: vc141.idb
Test/Article_16/Debug/Article_16.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Test/D3D12TestComponent/: D3D12HelloTriangle.cpp  D3D12HelloTriangle.h  D3D12TestComponent.vcxproj  D3D12TestComponent.vcxproj.filters  DXSample.cpp  DXSample.h  DXSampleHelper.h  Win32Application.cpp  Win32Application.h
Test/Debug/: Article_15.ilk  Article_16.ilk  Test.ilk  vc141.idb
Test/Debug/Test.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Test.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
